fix back button on booking flow on mobile.

--- a/app/assets/stylesheets/modals.styl
+++ b/app/assets/stylesheets/modals.styl
@@ -490,7 +490,7 @@
         height: 40px
         font-size: 15px
         @media phone
-          display: none
+          height: 0
         &.four .step
           width: 25%
         &.five .step
